...
    List<User> filteredUsers = allUsers.where((user) => user.id != currentUser).toList();

    showDialog(
      context: build_context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text('Add Friend'),
          content: filteredUsers.isEmpty
              ? Text('No other users found.')
              : SizedBox(
            width: double.maxFinite,
            child: ListView.builder(
              shrinkWrap: true,
...
                );
              },
            ),
          ),
          actions: [
            TextButton(
              child: Text('Add Manually', style: TextStyle(color: appColors['primary'], fontSize: 18),),
              onPressed: () async {
                Navigator.pop(context);
                String? friendEmail = await _showAddFriendManuallyDialog(build_context);
                if (friendEmail != null && friendEmail.isNotEmpty) {
                  _addFriendManually(friendEmail);
                } else {
...
        return;
      }
      _addFriend(newFriend);
    } else {
      scaffoldMessengerKey.currentState?.showSnackBar(
        SnackBar(
          content: Text('No User With This Email Was Found. Try Another Email'),
        ),
      );
    }
  }

  Future<String?> _showAddFriendManuallyDialog(BuildContext context) async {
...
          ),
          actions: [
            TextButton(
              onPressed: () {
                Navigator.pop(context, controller.text);
              },
              child: Text('Add', style: TextStyle(fontSize: 18),),
              style: ElevatedButton.styleFrom(
                backgroundColor: appColors['primary'],
                foregroundColor: appColors['buttonText'],
                shadowColor: Colors.blueGrey,
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(25),
...
