...
                        //     builder: (context) => const AppLayout(),
                        //   ),
                        // );
                      }
                    },
                    child: Text(
                      "Log In",
                      style: TextStyle(
                        color: appColors['buttonText'],
                        fontSize: 18,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
